--- a/product/src/main/resources/application.yaml
+++ b/product/src/main/resources/application.yaml
@@ -14,3 +14,6 @@ spring:
       hibernate:
         temp:
           use_jdbc_metadata_defaults: false
+springdoc:
+  api-docs:
+    path: /api-schema
