--- a/gateway/package.json
+++ b/gateway/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "mesh dev"
+    "start": "mesh start",
+    "dev": "mesh dev",
+    "build": "mesh build"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +14,7 @@
     "@graphql-mesh/cli": "^0.88.2",
     "@graphql-mesh/openapi": "^0.97.1",
     "@graphql-mesh/transform-filter-schema": "^0.96.1",
+    "@graphql-mesh/transform-prune": "^0.96.1",
     "@graphql-mesh/transform-rename": "^0.96.1",
     "@graphql-mesh/transform-type-merging": "^0.96.1",
     "graphql": "^16.8.1"
