--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,18 +14,6 @@ services:
       - 9080:9080
     networks:
       - dapr-network
-  gateway-dapr:
-    image: "daprio/daprd:edge"
-    command: [
-      "./daprd",
-      "--app-id", "gateway",
-      "--app-port", "4000",
-      "--dapr-http-port", "9080",
-      "-placement-host-address", "placement:50006",
-    ]
-    depends_on:
-      - gateway
-    network_mode: "service:gateway"
   product-db:
     image: postgres:14
     restart: unless-stopped
@@ -64,18 +52,6 @@ services:
       start_period: 3s
     networks:
       - dapr-network
-  product-dapr:
-    image: "daprio/daprd:edge"
-    command: [
-      "./daprd",
-      "--app-id", "product",
-      "--app-port", "8080",
-      "--dapr-http-port", "9080",
-      "-placement-host-address", "placement:50006",
-    ]
-    depends_on:
-      - product
-    network_mode: "service:product"
   inventory-db:
     image: postgres:14
     restart: unless-stopped
@@ -114,6 +90,46 @@ services:
       start_period: 3s
     networks:
       - dapr-network
+
+  # dapr whatever
+  placement:
+    image: "daprio/dapr"
+    command: ["./placement", "-port", "50006"]
+    ports:
+      - "50006:50006"
+    networks:
+      - dapr-network
+  
+  gateway-dapr:
+    image: "daprio/daprd:edge"
+    command: [
+      "./daprd",
+      "--app-id", "gateway",
+      "--app-port", "4000",
+      "--dapr-http-port", "9080",
+      "-placement-host-address", "placement:50006",
+      "--config", "/config.yaml"
+    ]
+    volumes:
+      - "./dapr-config.yaml:/config.yaml"
+    depends_on:
+      - gateway
+    network_mode: "service:gateway"
+  product-dapr:
+    image: "daprio/daprd:edge"
+    command: [
+      "./daprd",
+      "--app-id", "product",
+      "--app-port", "8080",
+      "--dapr-http-port", "9080",
+      "-placement-host-address", "placement:50006",
+      "--config", "/config.yaml"
+    ]
+    volumes:
+      - "./dapr-config.yaml:/config.yaml"
+    depends_on:
+      - product
+    network_mode: "service:product"
   inventory-dapr:
     image: "daprio/daprd:edge"
     command: [
@@ -122,15 +138,50 @@ services:
       "--app-port", "8080",
       "--dapr-http-port", "9080",
       "-placement-host-address", "placement:50006",
+      "--config", "/config.yaml"
     ]
+    volumes:
+      - "./dapr-config.yaml:/config.yaml"
     depends_on:
       - inventory
     network_mode: "service:inventory"
-  placement:
-    image: "daprio/dapr"
-    command: ["./placement", "-port", "50006"]
+
+  # Zipkin
+  zipkin-all-in-one:
+    image: openzipkin/zipkin:latest
+    restart: always
     ports:
-      - "50006:50006"
+      - "9411:9411"
+    networks:
+      - dapr-network
+
+  # Collector
+  otel-collector:
+    image: otel/opentelemetry-collector:0.67.0
+    restart: always
+    command: ["--config=/etc/otel-collector-config.yaml"]
+    volumes:
+      - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml
+    ports:
+      - "1888:1888"   # pprof extension
+      - "8888:8888"   # Prometheus metrics exposed by the collector
+      - "8889:8889"   # Prometheus exporter metrics
+      - "13133:13133" # health_check extension
+      - "4317:4317"   # OTLP gRPC receiver
+      - "55679:55679" # zpages extension
+    depends_on:
+      - prometheus
+      - zipkin-all-in-one
+    networks:
+      - dapr-network
+
+  prometheus:
+    image: prom/prometheus:latest
+    restart: always
+    volumes:
+      - ./prometheus.yaml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
     networks:
       - dapr-network
 volumes:
